# holywar-telegram

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
docker/: Dockerfile_local  Dockerfile_master
src/: commands.rs  entity.rs  fetch_database.rs  formatter.rs  main.rs  parameters.rs  storage.rs  utils.rs
