[package]
name = "holywar-telegram"
version = "0.1.0"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
anyhow = "1.0.38"
chrono = "0.4.19"
dotenv = "0.15.0"
log = "0.4.11"
once_cell = "1.5.1"
pretty_env_logger = "0.4.0"
reqwest = "0.11.0"
serde = "1.0.123"
serde_json = "1.0.62"
serde_yaml = "0.8.17"
teloxide = "0.3.3"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros", "sync", "time"] }

[profile.release]
lto = true
