[package]
name = "holywar-telegram"
version = "0.1.0"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
chrono = "0.4.22"
dotenv = "0.15.0"
log = "0.4.17"
once_cell = "1.15.0"
pretty_env_logger = "0.4.0"
reqwest = "0.11.12"
serde = "1.0.145"
serde_json = "1.0.85"
serde_yaml = "0.9.13"
teloxide = { version = "0.10.1", features = ["auto-send", "macros"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.10"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["add-extension", "trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }

[profile.release]
lto = true
